sh2c/tests/fixtures/diag_span_bad_option_loc.stderr.expected
compile error: diag_span_bad_option_loc.sh2:2:30: write_file: append must be boolean literal
    write_file("foo", "bar", invalid)
                             ^~~~~~~
