sh2c/tests/fixtures/diag_span_bad_option_loc.sh2
func main() {
    write_file("foo", "bar", invalid)
}
